--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1"
+  },
+  "resolutions": {
+    "minimist": "1.2.5"
   }
 }
